k8s/reactservice/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: ClusterIP
  selector:
    app: react-service
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-service
  template:
    metadata:
      labels:
        app: react-service
        com.msinit.log: "true"
        com.msinit.service-name: reactservice
    spec:
      containers:
        - name: react-service
          image: __SERVICE_IMAGE__
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
